更新内容の説明

--- a/top.html
+++ b/top.html
@@ -159,7 +159,7 @@
           <li><a href="day2.html">2日目</a></li>
           <li><a href="day3.html">3日目</a></li>
           <li><a href="day4.html">4日目</a></li>
-          <li><a href="check.html">必要なもの</a></li>
+          <li><a href="check.html">もちもの</a></li>
         </ul>
       </nav>
       <!-- スライドショーの背景画像 -->
@@ -168,7 +168,7 @@
       <div class="slide" style="background-image: url('sisa.png')"></div>
       <h1>
         <span>沖</span><span>縄</span><span>本</span><span>島</span>・
-        <span>石</span><span>垣</span><span>島</span> 3泊4日 旅行
+        <span>石</span><span>垣</span><span>島</span> 旅行
       </h1>
     </div>
 
