更新内容の説明

--- a/top.html
+++ b/top.html
@@ -34,7 +34,8 @@
       }
 
       nav ul li {
-        margin: 0 15px; /* 各メニューの間隔を均等に設定 */
+        display: inline-block; /* インラインブロックでリスト項目を表示 */
+        margin: 0 20px; /* 左右にスペースを追加 */
       }
 
       nav ul li a {
