更新内容の説明

--- a/top.html
+++ b/top.html
@@ -35,7 +35,7 @@
 
       nav ul li {
         display: inline-block; /* インラインブロックでリスト項目を表示 */
-        margin: 0 20px; /* 左右にスペースを追加 */
+        margin: 20px; /* 左右にスペースを追加 */
       }
 
       nav ul li a {
@@ -89,6 +89,10 @@
         .hero h1 {
           font-size: 2em; /* ヒーローセクションの見出しを小さくする */
         }
+      }
+      nav ul li {
+        display: inline-block; /* インラインブロックでリスト項目を表示 */
+        margin: 15px; /* 左右にスペースを追加 */
       }
 
       /* 波打つアニメーション */
