更新内容の説明

--- a/top.html
+++ b/top.html
@@ -16,7 +16,7 @@
       /* ナビゲーションバー */
       nav {
         background-color: rgba(0, 0, 0, 0.6);
-        position: absolute; /* 写真内に配置 */
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
@@ -25,29 +25,29 @@
       }
 
       nav ul {
-        display: flex; /* フレックスボックスでレイアウト */
-        justify-content: center; /* 横方向に中央揃え */
-        align-items: center; /* 縦方向も中央揃え */
-        list-style: none; /* リストスタイルを削除 */
-        margin: 0; /* 外側の余白を削除 */
-        padding: 0; /* 内側の余白を削除 */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        margin: 0;
+        padding: 0;
       }
 
       nav ul li {
-        display: inline-block; /* インラインブロックでリスト項目を表示 */
-        margin: 20px; /* 左右にスペースを追加 */
+        display: inline-block;
+        margin: 20px;
       }
 
       nav ul li a {
-        color: white; /* 文字色 */
-        text-decoration: none; /* 下線を削除 */
-        font-size: 1.2em; /* フォントサイズ */
-        text-transform: uppercase; /* 大文字化 */
-        font-weight: bold; /* 太字 */
+        color: white;
+        text-decoration: none;
+        font-size: 1.2em;
+        text-transform: uppercase;
+        font-weight: bold;
       }
 
       nav ul li a:hover {
-        color: #ffcc00; /* ホバー時の色 */
+        color: #ffcc00;
       }
 
       /* ヒーローセクション */
@@ -57,80 +57,78 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        color: black;
-        text-shadow: 3px 3px 5px rgba(255, 255, 255, 0.7);
         background-size: cover;
         background-position: center;
         overflow: hidden;
-        opacity: 0;
-        animation: fadeIn 2s forwards; /* フェードインアニメーション */
       }
 
       .hero h1 {
-        font-size: 4em;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 3em;
+        color: white;
         text-align: center;
-        margin: 0;
-        display: inline-block;
-        animation: wave 4s ease-in-out infinite,
-          colorChange 6s ease-in-out infinite; /* アニメーションの時間を変更 */
+        text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
+        animation: pop 1.5s infinite ease-in-out, colorChange 3s infinite;
         font-weight: bold;
-      }
-      /* スマホ向けのレスポンシブデザイン */
-      @media (max-width: 768px) {
-        nav ul li {
-          display: block; /* リストを縦に並べる */
-          margin: 10px 0; /* 各メニュー間の余白を設定 */
-        }
-
-        nav ul li a {
-          font-size: 1em; /* フォントサイズを少し小さくする */
-        }
-
-        .hero h1 {
-          font-size: 2em; /* ヒーローセクションの見出しを小さくする */
-        }
-      }
-      nav ul li {
-        display: inline-block; /* インラインブロックでリスト項目を表示 */
-        margin: 10px; /* 左右にスペースを追加 */
+        letter-spacing: 2px;
       }
 
-      /* 波打つアニメーション */
-      @keyframes wave {
-        0% {
-          transform: translateY(0);
-        }
-        25% {
-          transform: translateY(-20px);
+      /* アニメーション */
+      @keyframes pop {
+        0%,
+        100% {
+          transform: translate(-50%, -50%) scale(1);
         }
         50% {
-          transform: translateY(0);
-        }
-        75% {
-          transform: translateY(20px);
-        }
-        100% {
-          transform: translateY(0);
+          transform: translate(-50%, -50%) scale(1.1);
         }
       }
 
-      /* 文字色がランダムに変化するアニメーション */
       @keyframes colorChange {
         0% {
-          color: #ff6347; /* トマト色 */
+          color: #ff6347;
         }
         25% {
-          color: #f0e68c; /* カーキ色 */
+          color: #f0e68c;
         }
         50% {
-          color: #ff1493; /* ディープピンク */
+          color: #ff1493;
         }
         75% {
-          color: #1e90ff; /* ドジャーブルー */
+          color: #1e90ff;
         }
         100% {
-          color: #32cd32; /* ライムグリーン */
+          color: #32cd32;
         }
+      }
+
+      /* もちものボタン */
+      .check-button {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        z-index: 1001;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        text-decoration: none;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        transition: transform 0.2s ease, background-color 0.2s ease;
+      }
+
+      .check-button img {
+        width: 70%;
+        height: auto;
+      }
+
+      .check-button:hover {
+        background-color: #ffcc00;
+        transform: scale(1.1);
       }
 
       /* スライドショーの設定 */
@@ -149,25 +147,6 @@
       .show {
         opacity: 1;
       }
-
-      /* コンテンツセクション */
-      .content {
-        padding: 20px;
-        background-color: rgba(255, 255, 255, 0.8);
-        border-radius: 10px;
-        max-width: 800px;
-        margin: 20px auto;
-      }
-
-      /* フェードインアニメーション */
-      @keyframes fadeIn {
-        0% {
-          opacity: 0;
-        }
-        100% {
-          opacity: 1;
-        }
-      }
     </style>
   </head>
   <body>
@@ -180,17 +159,21 @@
           <li><a href="day2.html">2日目</a></li>
           <li><a href="day3.html">3日目</a></li>
           <li><a href="day4.html">4日目</a></li>
-          <li><a href="check.html">もちもの</a></li>
         </ul>
       </nav>
+
+      <!-- もちものボタン -->
+      <a href="check.html" class="check-button">
+        <img src="bag.png" alt="もちもの" />
+      </a>
+
       <!-- スライドショーの背景画像 -->
       <div class="slide" style="background-image: url('aono.png')"></div>
       <div class="slide" style="background-image: url('hana.png')"></div>
       <div class="slide" style="background-image: url('sisa.png')"></div>
-      <h1>
-        <span>沖</span><span>縄</span><span>本</span><span>島</span>・
-        <span>石</span><span>垣</span><span>島</span> 旅行
-      </h1>
+
+      <!-- タイトル -->
+      <h1>沖縄本島・石垣島<br />3泊4日旅行</h1>
     </div>
 
     <script>
