--- a/day1.html
+++ b/day1.html
@@ -17,7 +17,7 @@
 
       /* 背景とナビゲーション */
       .hero {
-        background-image: url("sisa.png"); /* 背景に沖縄の風景画像 */
+        background-image: url("sisa.png");
         background-size: cover;
         background-position: center;
         padding: 80px 0;
@@ -31,33 +31,35 @@
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
       }
 
-      /* ナビゲーション */
       nav {
         background-color: rgba(0, 0, 0, 0.6);
-        padding: 10px 20px;
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
+        padding: 10px 20px;
         z-index: 1000;
       }
 
       nav ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         list-style: none;
         margin: 0;
         padding: 0;
-        text-align: center;
       }
 
       nav ul li {
-        display: inline;
-        margin: 0 15px;
+        display: inline-block;
+        margin: 20px;
       }
 
       nav ul li a {
         color: white;
         text-decoration: none;
         font-size: 1.2em;
+        text-transform: uppercase;
         font-weight: bold;
       }
 
@@ -80,7 +82,7 @@
         font-size: 2em;
         text-align: center;
         margin-bottom: 20px;
-        color: #32cd32; /* 明るい緑 */
+        color: #32cd32;
       }
 
       p {
@@ -91,8 +93,8 @@
       /* 予定リスト */
       .schedule {
         display: flex;
-        flex-direction: column; /* 1列縦並び */
-        gap: 20px; /* アイテム間の隙間 */
+        flex-direction: column;
+        gap: 20px;
         margin-top: 30px;
       }
 
@@ -160,7 +162,6 @@
         <li><a href="day3.html">3日目</a></li>
         <li><a href="day4.html">4日目</a></li>
         <li><a href="top.html">トップ</a></li>
-        <!-- "全体の流れ"を"トップ"に変更 -->
       </ul>
     </nav>
 
