--- a/day3.html
+++ b/day3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2日目 - 沖縄旅行 3泊4日</title>
+    <title>1日目 - 沖縄旅行 3泊4日</title>
     <style>
       body,
       html {
@@ -17,12 +17,12 @@
 
       /* 背景とナビゲーション */
       .hero {
-        background-image: url("sup.png"); /* 背景に沖縄の風景画像 */
+        background-image: url("sisa.png");
         background-size: cover;
         background-position: center;
         padding: 80px 0;
         text-align: center;
-        color: rgb(255, 0, 0);
+        color: white;
       }
 
       .hero h1 {
@@ -31,33 +31,35 @@
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
       }
 
-      /* ナビゲーション */
       nav {
         background-color: rgba(0, 0, 0, 0.6);
-        padding: 10px 20px;
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
+        padding: 10px 20px;
         z-index: 1000;
       }
 
       nav ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         list-style: none;
         margin: 0;
         padding: 0;
-        text-align: center;
       }
 
       nav ul li {
-        display: inline;
-        margin: 0 15px;
+        display: inline-block;
+        margin: 20px;
       }
 
       nav ul li a {
         color: white;
         text-decoration: none;
         font-size: 1.2em;
+        text-transform: uppercase;
         font-weight: bold;
       }
 
@@ -71,7 +73,7 @@
         margin-top: 60px;
         max-width: 900px;
         margin: 60px auto;
-        background-color: rgb(255, 255, 255);
+        background-color: white;
         border-radius: 10px;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
       }
@@ -80,7 +82,7 @@
         font-size: 2em;
         text-align: center;
         margin-bottom: 20px;
-        color: #32cd32; /* 明るい緑 */
+        color: #32cd32;
       }
 
       p {
@@ -91,8 +93,8 @@
       /* 予定リスト */
       .schedule {
         display: flex;
-        flex-direction: column; /* 1列縦並び */
-        gap: 20px; /* アイテム間の隙間 */
+        flex-direction: column;
+        gap: 20px;
         margin-top: 30px;
       }
 
@@ -149,7 +151,7 @@
     <!-- ヒーローセクション -->
     <div class="hero">
       <h1>沖縄旅行 3泊4日</h1>
-      <p>2日目 - 本島最終日→石垣島上陸</p>
+      <p>1日目 - 沖縄本島の冒険</p>
     </div>
 
     <!-- ナビゲーション -->
@@ -160,14 +162,13 @@
         <li><a href="day3.html">3日目</a></li>
         <li><a href="day4.html">4日目</a></li>
         <li><a href="top.html">トップ</a></li>
-        <!-- "全体の流れ"を"トップ"に変更 -->
       </ul>
     </nav>
 
     <!-- コンテンツ -->
     <div class="content">
-      <h2>2日目: 本島最終日→石垣島上陸</h2>
-      <p>本島を楽しんだ後、石垣島へ移動</p>
+      <h2>1日目: 沖縄本島観光</h2>
+      <p>沖縄本島での最初の日は、素晴らしい景色を楽しみながら観光します。</p>
 
       <!-- 予定リスト -->
       <div class="schedule">
