更新内容の説明

--- a/check.html
+++ b/check.html
@@ -146,35 +146,35 @@
         <ul>
           <li>
             <input type="checkbox" id="passport" />
-            <label for="passport">パスポート</label>
+            <label for="passport">金</label>
           </li>
           <li>
             <input type="checkbox" id="tickets" />
-            <label for="tickets">航空券</label>
+            <label for="tickets">金</label>
           </li>
           <li>
             <input type="checkbox" id="money" />
-            <label for="money">現金・カード</label>
+            <label for="money">金</label>
           </li>
           <li>
             <input type="checkbox" id="toothbrush" />
-            <label for="toothbrush">歯ブラシ</label>
+            <label for="toothbrush">金</label>
           </li>
           <li>
             <input type="checkbox" id="clothes" />
-            <label for="clothes">着替え</label>
+            <label for="clothes">金</label>
           </li>
           <li>
             <input type="checkbox" id="sunscreen" />
-            <label for="sunscreen">日焼け止め</label>
+            <label for="sunscreen">金</label>
           </li>
           <li>
             <input type="checkbox" id="camera" />
-            <label for="camera">カメラ</label>
+            <label for="camera">金</label>
           </li>
           <li>
             <input type="checkbox" id="chargers" />
-            <label for="chargers">充電器</label>
+            <label for="chargers">金</label>
           </li>
         </ul>
       </div>
