--- a/day2.html
+++ b/day2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1日目 - 沖縄旅行 3泊4日</title>
+    <title>2日目 - 沖縄旅行 3泊4日</title>
     <style>
       body,
       html {
@@ -151,7 +151,7 @@
     <!-- ヒーローセクション -->
     <div class="hero">
       <h1>沖縄旅行 3泊4日</h1>
-      <p>1日目 - 沖縄本島の冒険</p>
+      <p>2日目 - 沖縄本島から石垣島へ</p>
     </div>
 
     <!-- ナビゲーション -->
@@ -167,8 +167,8 @@
 
     <!-- コンテンツ -->
     <div class="content">
-      <h2>1日目: 沖縄本島観光</h2>
-      <p>沖縄本島での最初の日は、素晴らしい景色を楽しみながら観光します。</p>
+      <h2>2日目: 本島観光&石垣島上陸</h2>
+      <p>沖縄本島を楽しんだ後、石垣島へ！</p>
 
       <!-- 予定リスト -->
       <div class="schedule">
@@ -177,16 +177,24 @@
           <p>関西国際空港から沖縄へ向けて出発。</p>
         </div>
         <div class="schedule-item">
-          <h3>10:00 - 那覇空港到着</h3>
-          <p>沖縄の那覇空港に到着。</p>
+          <h3>本島を観光</h3>
+          <p></p>
         </div>
         <div class="schedule-item">
-          <h3>11:00 - レンタカーゲット</h3>
-          <p>レンタカーを借りて、沖縄本島をドライブ。</p>
+          <h3>17:30 - 那覇空港出発</h3>
+          <p>本島に本当に悔いがないように</p>
         </div>
         <div class="schedule-item">
-          <h3>14:00 - ホエールウォッチング</h3>
-          <p>沖縄で人気のホエールウォッチングを楽しみます。</p>
+          <h3>18:30 - 石垣空港到着</h3>
+          <p>石垣島に上陸！</p>
+        </div>
+        <div class="schedule-item">
+          <h3>20:00頃 - ホテルにチェックイン</h3>
+          <p>いい感じのところへ</p>
+        </div>
+        <div class="schedule-item">
+          <h3>自由時間</h3>
+          <p>素敵な夜を過ごす！</p>
         </div>
       </div>
 
