--- a/top.html
+++ b/top.html
@@ -108,8 +108,8 @@
       /* もちものボタン */
       .check-button {
         position: absolute;
-        top: 15px;
-        right: 15px;
+        bottom: 15px; /* 画面下部からの距離 */
+        right: 15px; /* 画面右端からの距離 */
         z-index: 1001;
         display: flex;
         align-items: center;
@@ -117,6 +117,8 @@
         width: 50px;
         height: 50px;
         text-decoration: none;
+        background-color: white; /* 背景色を白に */
+        border-radius: 50%; /* 円形ボタン */
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         transition: transform 0.2s ease, background-color 0.2s ease;
       }
@@ -173,7 +175,7 @@
       <div class="slide" style="background-image: url('sisa.png')"></div>
 
       <!-- タイトル -->
-      <h1>沖縄本島・石垣島<br />3泊4日旅行</h1>
+      <h1>沖縄本島・石垣島<br />旅行</h1>
     </div>
 
     <script>
