--- a/top.html
+++ b/top.html
@@ -31,6 +31,7 @@
         list-style: none;
         margin: 0;
         padding: 0;
+        margin-right: 10px;
       }
 
       nav ul li {
@@ -174,7 +175,7 @@
       <div class="slide" style="background-image: url('sisa.png')"></div>
 
       <!-- タイトル -->
-      <h1>沖縄本島・石垣島<br />旅行</h1>
+      <h1>沖縄本島<br />石垣島<br />旅行</h1>
     </div>
 
     <script>
