--- a/top.html
+++ b/top.html
@@ -31,7 +31,7 @@
         list-style: none;
         margin: 0;
         padding: 0;
-        margin-right: 10px;
+        margin-right: 20px;
       }
 
       nav ul li {
@@ -68,7 +68,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: 3em;
+        font-size: 50px;
         color: white;
         text-align: center;
         text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
