--- a/day1.html
+++ b/day1.html
@@ -43,7 +43,7 @@
 
       nav ul {
         display: flex;
-        justify-content: center;
+        justify-content: space-around; /* 等間隔で中央揃え */
         align-items: center;
         list-style: none;
         margin: 0;
@@ -52,7 +52,6 @@
 
       nav ul li {
         display: inline-block;
-        margin: 20px;
       }
 
       nav ul li a {
@@ -144,6 +143,34 @@
 
       .btn:hover {
         background-color: #228b22;
+      }
+
+      /* スマホ対応 */
+      @media (max-width: 768px) {
+        .hero h1 {
+          font-size: 2em; /* ヒーローセクションの文字サイズを小さく */
+        }
+
+        nav ul {
+          flex-direction: column; /* メニューを縦並びに */
+          align-items: center; /* メニューを中央揃え */
+        }
+
+        nav ul li {
+          margin-bottom: 10px; /* メニュー間の余白を調整 */
+        }
+
+        nav ul li a {
+          font-size: 1em; /* フォントサイズを調整 */
+        }
+
+        h2 {
+          font-size: 1.8em; /* 見出しを小さく */
+        }
+
+        .btn {
+          font-size: 1em; /* ボタンのフォントサイズも調整 */
+        }
       }
     </style>
   </head>
