--- a/day1.html
+++ b/day1.html
@@ -37,13 +37,13 @@
         top: 0;
         left: 0;
         width: 100%;
-        padding: 10px 20px;
+        padding: 10px 0;
         z-index: 1000;
       }
 
       nav ul {
         display: flex;
-        justify-content: space-around; /* 等間隔で中央揃え */
+        justify-content: space-around; /* 横並びで等間隔 */
         align-items: center;
         list-style: none;
         margin: 0;
@@ -51,7 +51,7 @@
       }
 
       nav ul li {
-        display: inline-block;
+        margin: 0 10px; /* 横方向の余白 */
       }
 
       nav ul li a {
@@ -152,12 +152,12 @@
         }
 
         nav ul {
-          flex-direction: column; /* メニューを縦並びに */
-          align-items: center; /* メニューを中央揃え */
+          flex-wrap: wrap; /* 横並びの要素を自動的に折り返す */
+          justify-content: center; /* 要素を中央揃え */
         }
 
         nav ul li {
-          margin-bottom: 10px; /* メニュー間の余白を調整 */
+          margin: 5px 10px; /* 各メニューの間隔を調整 */
         }
 
         nav ul li a {
