--- a/day3.html
+++ b/day3.html
@@ -51,7 +51,7 @@
 
       nav ul {
         display: flex;
-        justify-content: center;
+        justify-content: space-around; /* 等間隔で横並び */
         align-items: center;
         list-style: none;
         margin: 0;
@@ -60,7 +60,6 @@
 
       nav ul li {
         display: inline-block;
-        margin: 0 20px;
       }
 
       nav ul li a {
