--- a/day4.html
+++ b/day4.html
@@ -51,7 +51,7 @@
 
       nav ul {
         display: flex;
-        justify-content: center;
+        justify-content: space-around; /* 等間隔で横並び */
         align-items: center;
         list-style: none;
         margin: 0;
@@ -60,7 +60,6 @@
 
       nav ul li {
         display: inline-block;
-        margin: 0 20px;
       }
 
       nav ul li a {
@@ -166,6 +165,7 @@
 
         nav ul {
           flex-direction: column; /* ナビゲーションを縦並びに変更 */
+          padding: 10px 0;
         }
 
         nav ul li {
@@ -228,6 +228,8 @@
           <p>沖縄で人気のホエールウォッチングを楽しみます。</p>
         </div>
       </div>
+
+      <a href="day4.html" class="btn">次の日へ</a>
     </div>
   </body>
 </html>
