更新内容の説明

--- a/day1.html
+++ b/day1.html
@@ -178,7 +178,7 @@
     <!-- ヒーローセクション -->
     <div class="hero">
       <h1>沖縄旅行 3泊4日</h1>
-      <p>1日目 - 沖縄本島の冒険</p>
+      <p>1日目</p>
     </div>
 
     <!-- ナビゲーション -->
@@ -195,25 +195,57 @@
     <!-- コンテンツ -->
     <div class="content">
       <h2>1日目: 沖縄本島観光</h2>
-      <p>沖縄本島での最初の日は、素晴らしい景色を楽しみながら観光します。</p>
+      <p>沖縄本島での最初の日は、かます。</p>
 
       <!-- 予定リスト -->
       <div class="schedule">
         <div class="schedule-item">
-          <h3>7:00 - 関西国際空港出発</h3>
-          <p>関西国際空港から沖縄へ向けて出発。</p>
+          <h3>5:14 - 始発に乗る</h3>
+          <p>寝坊したら笑うしかない</p>
         </div>
         <div class="schedule-item">
-          <h3>10:00 - 那覇空港到着</h3>
-          <p>沖縄の那覇空港に到着。</p>
+          <h3>6:56 - 関空に到着</h3>
+          <p>無料バスで第1ターミナルから第2ターミナルへ（15分）※LCCの場合</p>
         </div>
         <div class="schedule-item">
-          <h3>11:00 - レンタカーゲット</h3>
-          <p>レンタカーを借りて、沖縄本島をドライブ。</p>
+          <h3>8:30 - 関空を出発</h3>
+          <p>誰かみたいにならないように</p>
         </div>
         <div class="schedule-item">
-          <h3>14:00 - ホエールウォッチング</h3>
-          <p>沖縄で人気のホエールウォッチングを楽しみます。</p>
+          <h3>10:55 - 那覇空港に到着</h3>
+          <p>めんそーれのやつで写真を撮る</p>
+        </div>
+        <div class="schedule-item">
+          <h3>11:30 - レンタカー屋さんに向かって借りる（無料バス）</h3>
+          <p>無料バスナイス</p>
+        </div>
+        <div class="schedule-item">
+          <h3>12:00 - 🐳ウォッチングの集合場所に向かう</h3>
+          <p>わんちゃん飯食いながらね</p>
+        </div>
+        <div class="schedule-item">
+          <h3>13:00 - 🐳ウォッチングの集合場所に到着</h3>
+          <p>鯨しばきにいく</p>
+        </div>
+        <div class="schedule-item">
+          <h3>17:00 - 🐳ウォッチング終了</h3>
+          <p>鯨しばき終わり</p>
+        </div>
+        <div class="schedule-item">
+          <h3>17:40 - かりゆし水族館（チケットは当日）</h3>
+          <p>1時間で攻略</p>
+        </div>
+        <div class="schedule-item">
+          <h3>18:40 - ホテルに向かい、チェックイン</h3>
+          <p>かりゆしにより時間変動の可能性あり</p>
+        </div>
+        <div class="schedule-item">
+          <h3>19:30 - 自由行動！</h3>
+          <p>いいご飯屋にいく！しっぽり飲む！</p>
+        </div>
+        <div class="schedule-item">
+          <h3>??:?? - 就寝</h3>
+          <p>1日目終了</p>
         </div>
       </div>
 
