--- a/day2.html
+++ b/day2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1日目 - 沖縄旅行 3泊4日</title>
+    <title>2日目 - 沖縄旅行 3泊4日</title>
     <style>
       body,
       html {
@@ -178,7 +178,7 @@
     <!-- ヒーローセクション -->
     <div class="hero">
       <h1>沖縄旅行 3泊4日</h1>
-      <p>1日目 - 沖縄本島の冒険</p>
+      <p>2日目</p>
     </div>
 
     <!-- ナビゲーション -->
@@ -194,26 +194,60 @@
 
     <!-- コンテンツ -->
     <div class="content">
-      <h2>1日目: 沖縄本島観光</h2>
-      <p>沖縄本島での最初の日は、素晴らしい景色を楽しみながら観光します。</p>
+      <h2>2日目: 沖縄本島最終日</h2>
+      <p>本島を満喫し、石垣島へレッツゴー</p>
 
       <!-- 予定リスト -->
       <div class="schedule">
         <div class="schedule-item">
-          <h3>7:00 - 関西国際空港出発</h3>
-          <p>関西国際空港から沖縄へ向けて出発。</p>
+          <h3>10:30 - ホテルをチェックアウト</h3>
+          <p>寝坊したら笑うしかない</p>
         </div>
         <div class="schedule-item">
-          <h3>10:00 - 那覇空港到着</h3>
-          <p>沖縄の那覇空港に到着。</p>
+          <h3>
+            11:30 アメリカンビレッジに到着（お昼ご飯）🍔（近くにビーチある）
+          </h3>
+          <p>本場アメリカ（？）を肌で感じる</p>
         </div>
         <div class="schedule-item">
-          <h3>11:00 - レンタカーゲット</h3>
-          <p>レンタカーを借りて、沖縄本島をドライブ。</p>
+          <h3>14:10 - レンタカーを返す</h3>
+          <p>愛車に別れを告げる</p>
         </div>
         <div class="schedule-item">
-          <h3>14:00 - ホエールウォッチング</h3>
-          <p>沖縄で人気のホエールウォッチングを楽しみます。</p>
+          <h3>14:40 - 那覇空港へ向かう（無料送迎バスを利用）</h3>
+          <p>ありがとう無料</p>
+        </div>
+        <div class="schedule-item">
+          <h3>14:10 - レンタカーを返す</h3>
+          <p>愛車に別れを告げる</p>
+        </div>
+        <div class="schedule-item">
+          <h3>16:10 - 那覇空港を出発</h3>
+          <p>本島にありがとう（本当に）</p>
+        </div>
+        <div class="schedule-item">
+          <h3>17:15 - 石垣空港に到着</h3>
+          <p>ついに上陸！</p>
+        </div>
+        <div class="schedule-item">
+          <h3>14:10 - レンタカーを返す</h3>
+          <p>愛車に別れを告げる</p>
+        </div>
+        <div class="schedule-item">
+          <h3>14:10 - レンタカーを返す</h3>
+          <p>愛車に別れを告げる</p>
+        </div>
+        <div class="schedule-item">
+          <h3>14:10 - レンタカーを返す</h3>
+          <p>愛車に別れを告げる</p>
+        </div>
+        <div class="schedule-item">
+          <h3>14:10 - レンタカーを返す</h3>
+          <p>愛車に別れを告げる</p>
+        </div>
+        <div class="schedule-item">
+          <h3>14:10 - レンタカーを返す</h3>
+          <p>愛車に別れを告げる</p>
         </div>
       </div>
 
