更新内容の説明

--- a/day2.html
+++ b/day2.html
@@ -17,7 +17,7 @@
 
       /* 背景とナビゲーション */
       .hero {
-        background-image: url("sisa.png");
+        background-image: url("ame.png");
         background-size: cover;
         background-position: center;
         padding: 80px 0;
@@ -203,6 +203,7 @@
           <h3>10:30 - ホテルをチェックアウト</h3>
           <p>寝坊したら笑うしかない</p>
         </div>
+
         <div class="schedule-item">
           <h3>
             11:30 アメリカンビレッジに到着（お昼ご飯）🍔（近くにビーチある）
@@ -218,10 +219,6 @@
           <p>ありがとう無料</p>
         </div>
         <div class="schedule-item">
-          <h3>14:10 - レンタカーを返す</h3>
-          <p>愛車に別れを告げる</p>
-        </div>
-        <div class="schedule-item">
           <h3>16:10 - 那覇空港を出発</h3>
           <p>本島にありがとう（本当に）</p>
         </div>
@@ -230,24 +227,51 @@
           <p>ついに上陸！</p>
         </div>
         <div class="schedule-item">
-          <h3>14:10 - レンタカーを返す</h3>
-          <p>愛車に別れを告げる</p>
+          <h3>18:00 - レンタカーを借りる</h3>
+          <p>
+            念願のオープンカー！
+            <a
+              href="https://gsrenta.com/vehicle_list/mini-convertible/"
+              target="_blank"
+              >詳細はこちら</a
+            >
+          </p>
         </div>
         <div class="schedule-item">
-          <h3>14:10 - レンタカーを返す</h3>
-          <p>愛車に別れを告げる</p>
+          <h3>18:30 - ホテルに向かい、チェックイン</h3>
+          <p>
+            ええホテル
+            <a href="https://www.art-ishigakijima.com/" target="_blank"
+              >詳細はこちら</a
+            >
+          </p>
         </div>
         <div class="schedule-item">
-          <h3>14:10 - レンタカーを返す</h3>
-          <p>愛車に別れを告げる</p>
+          <h3>19:00 - だんこう（居酒屋）で晩御飯</h3>
+          <p>
+            良さげなところ
+            <a
+              href="https://map.yahoo.co.jp/v3/place/Zkhy9h8irpk"
+              target="_blank"
+              >詳細はこちら</a
+            >
+          </p>
         </div>
         <div class="schedule-item">
-          <h3>14:10 - レンタカーを返す</h3>
-          <p>愛車に別れを告げる</p>
+          <h3>20:30 - スカイバー カプリコンへ</h3>
+          <p>
+            おしゃれなお酒を
+            <a
+              href="https://yoyaku.toreta.in/capricorn/#/reserve-info"
+              target="_blank"
+              >詳細はこちら</a
+            >
+          </p>
         </div>
+
         <div class="schedule-item">
-          <h3>14:10 - レンタカーを返す</h3>
-          <p>愛車に別れを告げる</p>
+          <h3>??:??- 就寝</h3>
+          <p>2日目終了</p>
         </div>
       </div>
 
