--- a/day3.html
+++ b/day3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1日目 - 沖縄旅行 3泊4日</title>
+    <title>3日目 - 沖縄旅行 3泊4日</title>
     <style>
       body,
       html {
@@ -17,7 +17,7 @@
 
       /* 背景とナビゲーション */
       .hero {
-        background-image: url("sisa.png");
+        background-image: url("taketomi.png");
         background-size: cover;
         background-position: center;
         padding: 80px 0;
@@ -178,7 +178,7 @@
     <!-- ヒーローセクション -->
     <div class="hero">
       <h1>沖縄旅行 3泊4日</h1>
-      <p>1日目 - 沖縄本島の冒険</p>
+      <p>3日目 - 竹富島</p>
     </div>
 
     <!-- ナビゲーション -->
@@ -194,30 +194,69 @@
 
     <!-- コンテンツ -->
     <div class="content">
-      <h2>1日目: 沖縄本島観光</h2>
-      <p>沖縄本島での最初の日は、素晴らしい景色を楽しみながら観光します。</p>
+      <h2>３日目: 竹富島観光</h2>
+      <p>竹富島上陸</p>
 
       <!-- 予定リスト -->
       <div class="schedule">
         <div class="schedule-item">
-          <h3>7:00 - 関西国際空港出発</h3>
-          <p>関西国際空港から沖縄へ向けて出発。</p>
+          <h3>7:30 - 起床&朝食</h3>
+          <p>寝坊したら笑うしかない</p>
         </div>
-        <div class="schedule-item">
-          <h3>10:00 - 那覇空港到着</h3>
-          <p>沖縄の那覇空港に到着。</p>
-        </div>
-        <div class="schedule-item">
-          <h3>11:00 - レンタカーゲット</h3>
-          <p>レンタカーを借りて、沖縄本島をドライブ。</p>
-        </div>
-        <div class="schedule-item">
-          <h3>14:00 - ホエールウォッチング</h3>
-          <p>沖縄で人気のホエールウォッチングを楽しみます。</p>
-        </div>
-      </div>
 
-      <a href="day4.html" class="btn">次の日へ</a>
+        <div class="schedule-item">
+          <h3>10:30 - 竹富島へGO!</h3>
+          <p>石垣港からフェリーで15分くらい</p>
+        </div>
+        <div class="schedule-item">
+          <h3>11:00 - 水牛車観光（水牛の気分で時間変わるらしい）</h3>
+          <p>水牛を奴隷のように（嘘です）</p>
+        </div>
+        <div class="schedule-item">
+          <h3>11:30 - レンタルチャリを借りる</h3>
+          <p>ゆめの得意分野</p>
+        </div>
+
+        <div class="schedule-item">
+          <h3>12:00 - そば処 竹の子でランチ</h3>
+          <p>
+            八重山そばを喰らう
+            <a href="https://soba.takenoko-taketomi.com/" target="_blank"
+              >詳細はこちら</a
+            >
+          </p>
+        </div>
+        <div class="schedule-item">
+          <h3>13:30 - コンドイ浜&星砂海岸へGO</h3>
+          <p>綺麗きれいキレイ</p>
+        </div>
+        <div class="schedule-item">
+          <h3>14:30 - 喜宝院蒐集館（寄る程度でOK）</h3>
+          <p>日本最南端のお寺らしい</p>
+        </div>
+        <div class="schedule-item">
+          <h3>15:20- 石垣へ帰還</h3>
+          <p>竹富ありがとう</p>
+        </div>
+        <div class="schedule-item">
+          <h3>16:30 - 石垣島鍾乳洞</h3>
+          <p>ついでに涼しむ</p>
+        </div>
+        <div class="schedule-item">
+          <h3>18:40 - 観音崎で夕日を拝む</h3>
+          <p>綺麗みたいよん</p>
+        </div>
+        <div class="schedule-item">
+          <h3>19:45 - 居酒屋あっき（予約いるかも）</h3>
+          <p>軽く歩くかも</p>
+        </div>
+        <div class="schedule-item">
+          <h3>??:?? - 自由＆就寝</h3>
+          <p>3日目終了</p>
+        </div>
+
+        <a href="day4.html" class="btn">次の日へ</a>
+      </div>
     </div>
   </body>
 </html>
