--- a/day4.html
+++ b/day4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1日目 - 沖縄旅行 3泊4日</title>
+    <title>4日目 - 沖縄旅行 3泊4日</title>
     <style>
       body,
       html {
@@ -17,7 +17,7 @@
 
       /* 背景とナビゲーション */
       .hero {
-        background-image: url("sisa.png");
+        background-image: url("isiao.png");
         background-size: cover;
         background-position: center;
         padding: 80px 0;
@@ -178,7 +178,7 @@
     <!-- ヒーローセクション -->
     <div class="hero">
       <h1>沖縄旅行 3泊4日</h1>
-      <p>1日目 - 沖縄本島の冒険</p>
+      <p>4日目 - 石垣島堪能</p>
     </div>
 
     <!-- ナビゲーション -->
@@ -194,26 +194,53 @@
 
     <!-- コンテンツ -->
     <div class="content">
-      <h2>1日目: 沖縄本島観光</h2>
-      <p>沖縄本島での最初の日は、素晴らしい景色を楽しみながら観光します。</p>
+      <h2>４日目: 石垣島観光</h2>
+      <p>最終日は石垣を全身で感じる</p>
 
       <!-- 予定リスト -->
       <div class="schedule">
         <div class="schedule-item">
-          <h3>7:00 - 関西国際空港出発</h3>
-          <p>関西国際空港から沖縄へ向けて出発。</p>
+          <h3>8:00 - 起床＆朝食</h3>
+          <p>寝坊したら笑われへん</p>
         </div>
         <div class="schedule-item">
-          <h3>10:00 - 那覇空港到着</h3>
-          <p>沖縄の那覇空港に到着。</p>
+          <h3>10:30 - 川平湾でグラスボート</h3>
+          <p>
+            船乗ってお魚くんたちを見る
+            <a href="https://gurukun-kabira.com/booking-form/">詳細はこちら</a>
+          </p>
         </div>
         <div class="schedule-item">
-          <h3>11:00 - レンタカーゲット</h3>
-          <p>レンタカーを借りて、沖縄本島をドライブ。</p>
+          <h3>12:30 - 青の洞窟シュノーケリングツアー</h3>
+          <p>
+            絶対おもろい
+            <a href="https://activityjapan.com/publish/plan/46712"
+              >詳細はこちら</a
+            >
+          </p>
         </div>
         <div class="schedule-item">
-          <h3>14:00 - ホエールウォッチング</h3>
-          <p>沖縄で人気のホエールウォッチングを楽しみます。</p>
+          <h3>16:00 - 石垣ドライブ＆適当にご飯（バーガーとかタコライス）</h3>
+          <p>もうノリでなんとか</p>
+        </div>
+        <div class="schedule-item">
+          <h3>17:00 - レンタカー返却</h3>
+          <p>将来オープンカーを買うか決める</p>
+        </div>
+        <div class="schedule-item">
+          <h3>18:45 - 石垣空港出発</h3>
+          <p>お土産買って涙の別れ</p>
+        </div>
+        <div class="schedule-item">
+          <h3>21:00 - 関西国際空港到着</h3>
+          <p>疲労やばそう</p>
+        </div>
+        <div class="schedule-item">
+          <h3>??:?? - 気合いで帰還</h3>
+          <p>家着くまでがなんとやら</p>
+        </div>
+        <div class="schedule-item">
+          <h3>お疲れ様でした！最高の思い出！</h3>
         </div>
       </div>
     </div>
