更新内容の説明

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <h2>あいことばを入力</h2>
       <input type="password" id="password" placeholder="あいことばを入力" />
       <button onclick="checkPassword()">送信</button>
-      <p id="error-message">あいことばが間違っています。</p>
+      <p id="error-message">あいことばが間違じゃぼけ</p>
     </div>
 
     <script>
